--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <h2>3. Leave to Avoid Punishment (LTAP)</h2>
         <p>Disconnecting or leaving the server to avoid roleplay consequences is not allowed.</p>
         <ul>
-            <li>Logging out during active RP counts as LTAP.</li>
+            <li>Logging out during active staff scene counts as LTAP.</li>
             <li>Crashing must be reported immediately upon return.</li>
         </ul>
     </div>
